[tool.poetry]
name = "mitemperature2-exporter"
version = "0.1.0"
description = ""
authors = ["csrutil <csrutil@protonmail.com>"]
readme = "README.md"
packages = [{include = "mitemperature2_exporter"}]

[tool.poetry.dependencies]
python = "^3.10"
pybluez = { git = "https://github.com/pybluez/pybluez.git" }
Flask = "^2.2.2"
toml = "^0.10.2"
black = "^22.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
